force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice_Line_Item__c/Payable_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Payable Invoice Line Item</label>
    <nameField>
        <displayFormat>INVLI-{000000000}</displayFormat>
        <label>Payable Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payable Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>