force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice_Line_Item__c/fields/Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining__c</fullName>
    <formula
  >Federal_Contract_Line_Item__r.Amount__c -  Amount_to_be_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>