force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice_Line_Item__c/fields/Amount_to_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_be_Paid__c</fullName>
    <label>Amount to be Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>