force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice_Line_Item__c/fields/Contract_CLIN__c.field-meta.xml
<CustomField>
    <fullName>Contract_CLIN__c</fullName>
    <formula>Federal_Contract_Line_Item__r.CLIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract CLIN</label>
    <type>Text</type>
</CustomField>