force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice_Line_Item__c/fields/Contract_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period__c</fullName>
    <label>Contract Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Period</fullName>
            </value>
            <value>
                <fullName>Option Period 1</fullName>
            </value>
            <value>
                <fullName>Option Period 2</fullName>
            </value>
            <value>
                <fullName>Option Period 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>