force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice_Line_Item__c/fields/Federal_Contract_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Federal_Contract_Line_Item__c</fullName>
    <label>Federal Contract Line Item</label>
    <referenceTo>Federal_Contract_Line_Item__c</referenceTo>
    <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
    <relationshipName>Payable_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>