force-app/main/Government_Documents/Purchasing_and_Invoicing/objects/Payable_Invoice_Line_Item__c/fields/Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Payable_Invoice__c</fullName>
    <label>Payable Invoice</label>
    <referenceTo>Payable_Invoice__c</referenceTo>
    <relationshipLabel>Payable Invoice Line Items</relationshipLabel>
    <relationshipName>Payable_Invoice_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>